# wmonad

./: .dir-locals.el  .ghci  .gitignore  cpphs.patch  default.nix  flake.nix  readme.org  swc.h  wm.c  wmonad.cabal
src/: Main.hs  SWC.hs  WMonad.hs  wm.c
src/Control/Comonad/Store/Zipper/: Circular.hs
src/Data/Enum/: Util.hs
src/Foreign/: Callable.hs  Callback.hs
src/Foreign/Ptr/: Total.hs
src/Graphics/: LibInput.chs
src/Graphics/Wayland/: SWC.chs  Server.chs
src/Graphics/Wayland/SWC/: Colour.hs  Types.chs
src/Graphics/Wayland/Server/: Display.chs  Events.chs  Protocol.chs
src/SWC/: Internal.hsc  Wayland.hsc
src/System/: InputDevice.chs
src/WMonad/: Core.hs  Events.hs  Internal.hsc  SWC.hs  Types.hs
src/WMonad/Events/: InputEvent.hs  NewWindow.hs
src/WMonad/Types/: Internal.hs
