name:                wmonad
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Tony Olagbaiye
maintainer:          wmonad@fron.io
copyright:           (c) 2020 The Human Race
build-type:          Simple
cabal-version:       >=1.10

executable wmonad
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       WMonad
                     , SWC
                     , SWC.Internal
                     , SWC.Wayland
                     , Control.Comonad.Store.Zipper.Circular
  build-depends:       base >=4 && <5
                     , bytestring
                     , co-log
                     , comonad
                     , comonad-extras
                     , containers
                     , hint
                     , inline-c
                     , lens
                     , mmorph
                     , stm
                     , template-haskell
                     , time
                     , transformers
                     , Unique
                     , unix
                     , xkbcommon
  default-language:    Haskell2010

  extra-libraries:     wayland-server input xkbcommon swc
--  include-dirs:        libswc
  cc-options:          -Wall
  ghc-options:         -Wall -threaded
