name:                wmonad
version:             0.1.0.0
license:             MPL-2.0
license-file:        LICENSE
author:              Tony Olagbaiye
maintainer:          wmonad@fron.io
copyright:           (c) 2020 The Human Race
build-type:          Simple
cabal-version:       >=1.10

executable wmonad
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       WMonad
                     , SWC
                     , SWC.Internal
                     , SWC.Wayland
                     , Control.Comonad.Store.Zipper.Circular
  build-depends:       base >=4 && <5
                     , bytestring
                     , co-log
                     , co-log-core
                     , co-log-polysemy
                     , co-log-polysemy-formatting
                     , comonad
                     , comonad-extras
                     , containers
                     , formatting
                     , hint
                     , inline-c
                     , lens
                     , mmorph
                     , polysemy
                     , polysemy-plugin
                     , polysemy-zoo
                     , stm
                     , text
                     , template-haskell
                     , time
                     , transformers
                     , Unique
                     , unix
                     , xkbcommon
  default-language:    Haskell2010

  extra-libraries:     wayland-server input xkbcommon swc
  cc-options:          -O2 -Wall
  ghc-options:         -O2 -Wall -g -threaded -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  default-extensions:
   -- DataKinds
   -- FlexibleContexts
   -- GADTs
   -- LambdaCase
   -- PolyKinds
   -- RankNTypes
   -- ScopedTypeVariables
   -- TypeApplications
   -- TypeOperators
   -- TypeFamilies
